--- a/15_Django/firstProject/templates/layout.html
+++ b/15_Django/firstProject/templates/layout.html
@@ -1,4 +1,6 @@
+{% load static tailwind_tags %}
 {% load static %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,7 +11,7 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>{% block title %} Default title {% endblock %}</title>
-
+		{% tailwind_css %}
 		<link rel="stylesheet" href="{% static 'styles/index.css' %}" />
 	</head>
 	<body>
