--- a/15_Django/firstProject/templates/websites/index.html
+++ b/15_Django/firstProject/templates/websites/index.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 
-<h1>This is chai aur django</h1>
+<h1 class="text-3xl">This is chai aur django</h1>
 
 {% endblock content %}
