--- a/15_Django/firstProject/firstapp/templates/firstapp/all_chai.html
+++ b/15_Django/firstProject/firstapp/templates/firstapp/all_chai.html
@@ -1,11 +1,19 @@
-{% extends "layout.html" %} 
+{% extends 'layout.html' %}
 
-{% block title %} All chai {% endblock %}
+{% block title %}
+  All chai
+{% endblock %}
 
 {% block content %}
+  <h1>All chai</h1>
 
-<h1>
-	All chai
-</h1>
-
-{% endblock content %}
+  <div class="grid grid-cols-2 gap-4 p-6">
+    {% for chai in chais %}
+      <div class="bg-slate-800 p-4">
+        <img src="{{ chai.image.url }}" alt="{{ chai.name }}" />
+        <p>{{ chai.name }}</p>
+        <a href="{% url 'chai_detail' chai.id %}"><button class="flex px-4 py-2 bg-orange-600 rounded w-full">{{ chai.type }}</button></a>
+      </div>
+    {% endfor %}
+  </div>
+{% endblock %}
